--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,14 @@ th {
 @font-face {
   font-family: "Encode Sans Compressed";
   src: url("../assets/fonts/encodesanscompressed-600-semibold-webfont.eot");
-  src: url("../assets/fonts/encodesanscompressed-600-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/encodesanscompressed-600-semibold-webfont.woff") format("woff"), url("../assets/fonts/encodesanscompressed-600-semibold-webfont.ttf") format("truetype"), url("../assets/fonts/encodesanscompressed-600-semibold-webfont.svg#encodesanscompressed-600-semibold-webfont") format("svg");
+  src: url("../assets/fonts/encodesanscompressed-600-semibold-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("../assets/fonts/encodesanscompressed-600-semibold-webfont.woff")
+      format("woff"),
+    url("../assets/fonts/encodesanscompressed-600-semibold-webfont.ttf")
+      format("truetype"),
+    url("../assets/fonts/encodesanscompressed-600-semibold-webfont.svg#encodesanscompressed-600-semibold-webfont")
+      format("svg");
   font-weight: 600;
   font-style: normal;
 }
@@ -377,7 +384,7 @@ h6 {
   line-height: 1.3;
 }
 .uw-content > ul > li {
-  margin: 1em 0 2em;
+  /* margin: 1em 0 2em; */
 }
 .uw-content > ul > li p {
   margin: 0.5em 0 1em;
